--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,13 @@
     transform: rotate(360deg);
   }
 }
+
+p {
+  margin: 1em;
+}
+
+.units {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
