--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300");
+
 *:focus {
   outline: none;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
 }
 
 .App {
@@ -10,20 +17,41 @@ p {
   margin: 1em;
 }
 
+input {
+  text-align: center;
+  width: 3em;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1em;
+  border: 1px solid grey;
+  margin: auto 1em;
+  border: none;
+  border-bottom: 2px solid black;
+}
+
 .main-container {
   display: grid;
   place-items: center center;
 }
 
 .inputs {
+  margin: 1em 1em;
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .units {
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+
+.converter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 img.octo {
